# GnosisDB

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
openfhe/: CMakeLists.txt  openfhe.cpp
src/: pre.rs  rev1.rs
